# screen-switcher

./: .gitignore  Cargo.toml  Dockerfile  README.md  index.html  package.json  vite.config.ts
src/: main.css  main.rs  main.tsx  server.rs  switcher.rs
