[package]
name = "screen_switcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
clap = {version= "4", features=["derive","env"]}
tokio = "1.36.0"
tower-http = {version="0.6", features=["fs"]}
